Imagenes para el proyecto

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-	<p>Hello World</p>
-	<div class="w-64 h-64 bg-red-200"></div>
+	<p class="text-slate-500">Hello World</p>
+	<div class="w-64 h-64 bg-yellow-600"></div>
 </body>
 
 </html>
