Cuerpo de la pagina

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image" sizes="20x20" href="./favicon.ico">
 	<link rel="stylesheet" href="./css/output.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
+		rel="stylesheet">
 	<title>Travel Page</title>
 </head>
 
 <body>
-	<p class="text-slate-500">Hello World</p>
-	<div class="w-64 h-64 bg-yellow-600"></div>
+	<nav></nav>
+	<div id="tab_bar"></div>
+	<section>
+		<div id="home"></div>
+		<div id="recommended"></div>
+		<div id="featured_income"></div>
+	</section>
+	<footer></footer>
 </body>
 
 </html>
