--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image" sizes="20x20" href="./favicon.ico">
-	<link rel="stylesheet" href="./css/output.css">
+	<link rel="stylesheet" href="./css/min.output.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
@@ -14,14 +14,44 @@
 	<title>Travel Page</title>
 </head>
 
-<body>
+<body class="font-Montserrat">
 	<nav></nav>
 	<div id="tab_bar"></div>
-	<section>
-		<div id="home"></div>
-		<div id="recommended"></div>
-		<div id="featured_income"></div>
-	</section>
+
+	<header id="home w-screen">
+		<div class="w-full flex flex-col absolute space-y-80 pt-4 items-center">
+			<input class="w-5/6 text-center outline-none p-3 rounded-full shadow-sm" type="search"
+				placeholder="San Francisco">
+			<button class="w-1/2 bg-white text-primary text-md font-semibold p-3 rounded-full">Explore More</button>
+		</div>
+		<figure class="w-full h-full">
+			<img src="./css/assets/img/sanFrancisco.jpg" alt="Fondo de San Francisco">
+		</figure>
+	</header>
+
+	<main class="w-full">
+		<section class="px-4 py-6" id="recommended">
+			<h3 class="text-2xl font-semibold text-primary">
+				Our Recommendations
+			</h3>
+			<div class="cards-container mt-6">
+				<section class="card">
+					<figure class="w-full h-3/5 bg-norway bg-cover"></figure>
+					<article class="w-full h-2/5 p-3 space-y-1 bg-secondary text-white">
+						<h4 class="font-bold">
+							Norway
+						</h4>
+						<p class="text-xs">
+							Beautiful landscapes
+						</p>
+					</article>
+				</section>
+			</div>
+		</section>
+
+		<section id="featured_income"></section>
+	</main>
+
 	<footer></footer>
 </body>
 
