Scroll de recomendados

--- a/public/index.html
+++ b/public/index.html
@@ -29,20 +29,70 @@
 		</figure>
 	</header>
 
-	<main class="w-full">
-		<section class="px-4 py-6" id="recommended">
-			<h3 class="text-2xl font-semibold text-primary">
+	<main class="w-screen">
+		<section class="w-full py-6" id="recommended">
+			<h3 class="pl-4 text-2xl font-semibold text-primary">
 				Our Recommendations
 			</h3>
-			<div class="cards-container mt-6">
-				<section class="card">
-					<figure class="w-full h-3/5 bg-norway bg-cover"></figure>
-					<article class="w-full h-2/5 p-3 space-y-1 bg-secondary text-white">
+			<div
+				class="cards-container py-6 flex gap-4 overflow-x-scroll overscroll-x-contain  scroll-smooth snap-both snap-mandatory">
+				<!-- Card #1 -->
+				<section class="card ml-4">
+					<figure class="card-img bg-norway"></figure>
+					<article class="card-description bg-secondary text-white">
 						<h4 class="font-bold">
 							Norway
 						</h4>
 						<p class="text-xs">
 							Beautiful landscapes
+						</p>
+					</article>
+				</section>
+				<!-- Card #2 -->
+				<section class="card">
+					<figure class="card-img bg-new_york"></figure>
+					<article class="card-description bg-white text-tertiary">
+						<h4 class="font-bold">
+							New York
+						</h4>
+						<p class="text-xs">
+							Concrete jungle
+						</p>
+					</article>
+				</section>
+				<!-- Card #3 -->
+				<section class="card">
+					<figure class="card-img bg-yosemite"></figure>
+					<article class="card-description bg-secondary text-white">
+						<h4 class="font-bold">
+							Yosemite
+						</h4>
+						<p class="text-xs">
+							A break from the world
+						</p>
+					</article>
+				</section>
+				<!-- Card #4 -->
+				<section class="card">
+					<figure class="card-img bg-seattle"></figure>
+					<article class="card-description bg-white text-tertiary">
+						<h4 class="font-bold">
+							Seattle
+						</h4>
+						<p class="text-xs">
+							Big City
+						</p>
+					</article>
+				</section>
+				<!-- Card #5 -->
+				<section class="card mr-4">
+					<figure class="card-img bg-switzerland"></figure>
+					<article class="card-description bg-secondary text-white">
+						<h4 class="font-bold">
+							Switzerland
+						</h4>
+						<p class="text-xs">
+							Big City
 						</p>
 					</article>
 				</section>
