--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="w-full font-Montserrat box-border xl:max-w-6xl xl:mx-auto">
     <header class="w-full px-6 flex flex-col items-center h-[30rem] md:px-0 md:items-start lg:h-[36rem]">
-      <figure class="w-full absolute bg-sanFrancisco bg-cover bg-top bg-no-repeat h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[36rem]"></figure>
+      <figure class="w-full absolute bg-sanFrancisco bg-cover bg-top bg-no-repeat h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[36rem] xl:max-w-6xl"></figure>
       <nav class="z-10 w-full py-5 flex justify-end md:bg-white md:justify-between md:px-7 md:py-2 md:items-center lg:px-9 lg:py-3 md:shadow-sm xl:shadow-none"><a class="md:flex hidden items-center gap-1" href="#"><img class="w-10" src="./assets/svg/favicon.svg" alt="Icono de la pagina"><span class="text-primary text-lg font-bold">Travel Page</span></a>
         <label class="md:w-1/2 md:flex lg:hidden hidden z-10 w-full items-center gap-4 py-3 px-5 rounded-full shadow-sm" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
           <input class="text-start outline-none w-full text-md font-semibold" id="search" type="search" placeholder="San Francisco">
@@ -80,8 +80,8 @@
         <div class="card-container px-4 grid gap-6 md:px-10 md:grid-cols-5 md:grid-rows-3 lg:grid-rows-layout">
           <section class="card md:col-span-2 lg:col-span-full lg:row-span-1">
             <div class="content">
-              <article class="card__description">
-                <h3 class="text-2xl font-bold tracking-wider mb-3">Chicago</h3>
+              <article class="card__description md:w-1/5 lg:w-auto">
+                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Chicago</h3>
                 <p class="text-base font-normal">2 rooms, bathroom and kitchen.</p>
               </article>
               <figure class="card__img bg-chicago lg:max-h-[30rem]"></figure>
@@ -89,8 +89,8 @@
           </section>
           <section class="card md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2">
             <div class="content">
-              <article class="card__description">
-                <h3 class="text-2xl font-bold tracking-wider mb-3">Los Angeles</h3>
+              <article class="card__description md:w-2/5 lg:w-1/5 lg:left-36">
+                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Los Angeles</h3>
                 <p class="text-base font-normal">4 rooms, 3 bathrooms,  kitchen and private pool.</p>
               </article>
               <figure class="card__img bg-LA lg:max-h-[36rem]"></figure>
@@ -98,8 +98,8 @@
           </section>
           <section class="card md:col-span-full lg:col-span-3">
             <div class="content">
-              <article class="card__description">
-                <h3 class="text-2xl font-bold tracking-wider mb-3">Miami</h3>
+              <article class="card__description md:w-1/5 lg:w-1/3">
+                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Miami</h3>
                 <p class="text-base font-normal">3 rooms, 2 bathrooms,  kitchen and amazing sea view.</p>
               </article>
               <figure class="card__img bg-miami lg:max-h-[17rem]"></figure>
@@ -107,8 +107,8 @@
           </section>
           <section class="card md:col-span-full lg:col-span-3">
             <div class="content">
-              <article class="card__description">
-                <h3 class="text-2xl font-bold tracking-wider mb-3">Bali</h3>
+              <article class="card__description md:w-1/3 lg:w-1/5">
+                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Bali</h3>
                 <p class="text-base font-normal">2 rooms, 2 bathrooms,  kitchen and private pool.</p>
               </article>
               <figure class="card__img bg-bali lg:max-h-[17rem]"></figure>
