--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </header>
     <main class="flex flex-col gap-8 w-full py-6 md:py-10 md:gap-10" id="home">
       <section class="w-full" id="recommended">
-        <h2 class="title pl-5 md:pl-10">Our Recommendations</h2>
-        <div class="mini-cards-container pt-6 pb-2 flex gap-5 overflow-x-scroll overscroll-x-contain scroll-smooth md:gap-7 md:pt-8 xl:justify-center">
+        <h2 class="title pl-5 md:pl-10 xl:pl-5">Our Recommendations</h2>
+        <div class="mini-cards-container pt-6 pb-2 flex gap-5 overflow-x-scroll overscroll-x-contain scroll-smooth md:gap-7 md:pt-8 .5xl:justify-center">
           <section class="mini-card ml-6">
             <figure class="mini-card__img bg-norway"></figure>
             <article class="mini-card__description bg-secondary text-white">
@@ -76,10 +76,10 @@
         </div>
       </section>
       <section class="w-full" id="trending-stays">
-        <h2 class="title pl-5 pb-6 md:pl-10">Trending Stays</h2>
+        <h2 class="title pl-5 pb-6 md:pl-10 xl:pl-5">Trending Stays</h2>
         <div class="card-container px-4 grid gap-6 md:px-10 md:grid-cols-5 md:grid-rows-3 lg:grid-rows-layout">
           <section class="card md:col-span-2 lg:col-span-full lg:row-span-1">
-            <div class="content">
+            <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/5 lg:w-auto">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Chicago</h3>
                 <p class="text-base font-normal">2 rooms, bathroom and kitchen.</p>
@@ -88,8 +88,8 @@
             </div>
           </section>
           <section class="card md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2">
-            <div class="content">
-              <article class="card__description md:w-2/5 lg:w-1/5 lg:left-36">
+            <div class="content grid lg:justify-items-end">
+              <article class="card__description md:w-2/5 lg:w-1/5">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Los Angeles</h3>
                 <p class="text-base font-normal">4 rooms, 3 bathrooms,  kitchen and private pool.</p>
               </article>
@@ -97,7 +97,7 @@
             </div>
           </section>
           <section class="card md:col-span-full lg:col-span-3">
-            <div class="content">
+            <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/5 lg:w-1/3">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Miami</h3>
                 <p class="text-base font-normal">3 rooms, 2 bathrooms,  kitchen and amazing sea view.</p>
@@ -106,7 +106,7 @@
             </div>
           </section>
           <section class="card md:col-span-full lg:col-span-3">
-            <div class="content">
+            <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/3 lg:w-1/5">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Bali</h3>
                 <p class="text-base font-normal">2 rooms, 2 bathrooms,  kitchen and private pool.</p>
@@ -116,7 +116,7 @@
           </section>
         </div>
       </section>
-      <section class="w-full px-6 pb-2 flex flex-col gap-2 md:pl-10" id="FAQs">
+      <section class="w-full px-6 pb-2 flex flex-col gap-2 md:pl-10 xl:pl-5" id="FAQs">
         <h2 class="title mb-2 md:mb-4">FAQs</h2>
         <h3 class="subtitle">Payment Methods</h3>
         <p class="description">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
