--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-1" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-1" href="#about-us">About Us</a>
           </div>
         </div>
-        <figure class="night-mode py-2 px-5 rounded-full bg-white shadow-lg cursor-pointer md:p-0 md:bg-transparent md:transition-none md:active:translate-y-0 md:active:shadow-none md:shadow-none md:flex md:gap-8 md:cursor-default"><img class="hidden lg:block lg:w-5 md:cursor-pointer" src="./assets/svg/search.svg" alt="Icono de Busqueda"><img class="md:w-5 md:cursor-pointer" src="./assets/svg/moon.svg" alt="Icono de modo nocturno"><img class="hidden md:block md:w-5" src="./assets/svg/user.svg" alt="Icono de usuario"></figure>
+        <figure class="night-mode py-2 px-5 rounded-full bg-white shadow-lg cursor-pointer md:p-0 md:bg-transparent md:transition-none md:active:translate-y-0 md:active:shadow-none md:shadow-none md:flex md:gap-8 md:cursor-default"><img class="hidden lg:block lg:w-5 md:cursor-pointer" src="./assets/svg/search.svg" alt="Icono de Busqueda"><img class="md:w-5 md:cursor-pointer" id="toggle" src="./assets/svg/moon.svg" alt="Icono de modo nocturno"><img class="hidden md:block md:w-5" src="./assets/svg/user.svg" alt="Icono de usuario"></figure>
       </nav>
       <label class="md:mt-12 md:hidden md: z-10 w-full flex items-center gap-4 input-animation py-3 px-5 rounded-full shadow-lg bg-white" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
         <input class="text-start outline-none w-full text-md font-semibold" id="search" type="search" placeholder="San Francisco">
@@ -38,37 +38,37 @@
       <section class="w-full" id="recommended">
         <h2 class="title pl-5 md:pl-10 xl:pl-5">Our Recommendations</h2>
         <div class="mini-cards-container pt-6 pb-2 flex gap-5 overflow-x-scroll overscroll-x-contain scroll-smooth md:gap-7 md:pt-8 .5xl:justify-center">
-          <section class="mini-card ml-6">
+          <section class="mini-card">
             <figure class="mini-card__img bg-norway"></figure>
-            <article class="mini-card__description bg-secondary text-white">
+            <article class="mini-card__description">
               <h4 class="font-bold">Norway</h4>
               <p class="text-xs">Beautiful landscapes</p>
             </article>
           </section>
-          <section class="mini-card m-0">
+          <section class="mini-card">
             <figure class="mini-card__img bg-new_york"></figure>
-            <article class="mini-card__description bg-white text-tertiary">
+            <article class="mini-card__description">
               <h4 class="font-bold">New York</h4>
               <p class="text-xs">Concrete jungle</p>
             </article>
           </section>
-          <section class="mini-card m-0">
+          <section class="mini-card">
             <figure class="mini-card__img bg-yosemite"></figure>
-            <article class="mini-card__description bg-secondary text-white">
+            <article class="mini-card__description">
               <h4 class="font-bold">Yosemite</h4>
               <p class="text-xs">A break from the world</p>
             </article>
           </section>
-          <section class="mini-card m-0">
+          <section class="mini-card">
             <figure class="mini-card__img bg-seattle"></figure>
-            <article class="mini-card__description bg-white text-tertiary">
+            <article class="mini-card__description">
               <h4 class="font-bold">Seattle</h4>
               <p class="text-xs">Big City</p>
             </article>
           </section>
-          <section class="mini-card mr-6">
+          <section class="mini-card">
             <figure class="mini-card__img bg-switzerland"></figure>
-            <article class="mini-card__description bg-secondary text-white">
+            <article class="mini-card__description">
               <h4 class="font-bold">Switzerland</h4>
               <p class="text-xs">Big City</p>
             </article>
@@ -78,7 +78,7 @@
       <section class="w-full" id="trending-stays">
         <h2 class="title pl-5 pb-6 md:pl-10 xl:pl-5">Trending Stays</h2>
         <div class="card-container px-4 grid gap-6 md:px-10 md:grid-cols-5 md:grid-rows-3 lg:grid-rows-layout">
-          <section class="card md:col-span-2 lg:col-span-full lg:row-span-1">
+          <section class="card md:col-span-2 lg:col-span-full lg:row-span-1 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/5 lg:w-auto">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Chicago</h3>
@@ -87,7 +87,7 @@
               <figure class="card__img bg-chicago lg:max-h-[30rem]"></figure>
             </div>
           </section>
-          <section class="card md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2">
+          <section class="card md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-2/5 lg:w-1/5">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Los Angeles</h3>
@@ -96,7 +96,7 @@
               <figure class="card__img bg-LA lg:max-h-[36rem]"></figure>
             </div>
           </section>
-          <section class="card md:col-span-full lg:col-span-3">
+          <section class="card md:col-span-full lg:col-span-3 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/5 lg:w-1/3">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Miami</h3>
@@ -105,7 +105,7 @@
               <figure class="card__img bg-miami lg:max-h-[17rem]"></figure>
             </div>
           </section>
-          <section class="card md:col-span-full lg:col-span-3">
+          <section class="card md:col-span-full lg:col-span-3 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/3 lg:w-1/5">
                 <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Bali</h3>
