--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <link rel="icon" type="image" sizes="20x20" href="./favicon.ico">
     <title>Travel Page</title>
   </head>
-  <body class="w-full font-Montserrat box-border xl:max-w-6xl xl:mx-auto">
-    <header class="w-full px-6 flex flex-col items-center h-[30rem] md:px-0 md:items-start lg:h-[36rem]">
-      <figure class="w-full absolute bg-sanFrancisco bg-cover bg-top bg-no-repeat h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[36rem] xl:max-w-6xl"></figure>
-      <nav class="z-10 w-full py-5 flex justify-end md:bg-white md:justify-between md:px-7 md:py-2 md:items-center lg:px-9 lg:py-3 md:shadow-sm xl:shadow-none"><a class="md:flex hidden items-center gap-1" href="#"><img class="w-10" src="./assets/svg/favicon.svg" alt="Icono de la pagina"><span class="text-primary text-lg font-bold">Travel Page</span></a>
-        <label class="md:w-1/2 md:flex lg:hidden hidden z-10 w-full items-center gap-4 py-3 px-5 rounded-full shadow-sm" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
-          <input class="text-start outline-none w-full text-md font-semibold" id="search" type="search" placeholder="San Francisco">
+  <body class="w-full font-Montserrat box-border xl:max-w-6xl xl:mx-auto dark:bg-gray-900">
+    <header class="w-full px-6 flex flex-col items-center h-[30rem] md:px-0 md:items-start lg:h-[34rem]">
+      <figure class="w-full absolute bg-sanFrancisco bg-cover bg-top bg-no-repeat h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[34rem] xl:max-w-6xl xl:"></figure>
+      <nav class="z-10 w-full py-5 flex justify-end md:bg-white md:justify-between md:px-6 md:py-2 md:items-center lg:px-8 lg:py-3 md:shadow-sm xl:shadow-none xl:px-3 dark:md:bg-gray-800 dark:xl:bg-gray-900"><a class="md:flex hidden items-center gap-1" href="#"><img class="xl:w-9 w-10" src="./assets/svg/favicon.svg" alt="Icono de la pagina"><span class="text-primary text-lg font-bold xl:text-xl xl:font-semibold xl:tracking-tighter dark:text-white">Travel Page</span></a>
+        <label class="md:w-1/2 md:flex lg:hidden dark:md:shadow-gray-700 hidden z-10 w-full items-center gap-4 py-3 px-5 rounded-full shadow-sm" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
+          <input class="text-start outline-none w-full text-md font-semibold dark:md:bg-gray-800 dark:text-white" id="search" type="search" placeholder="San Francisco">
         </label>
         <div class="tabBar hidden lg:block">
-          <div class="md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold w-full py-5 flex justify-center gap-10 bg-white border border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda">
-              <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-1">Locations</p></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos">
-              <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-1">Stays</p></a>
-            <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-1" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-1" href="#about-us">About Us</a>
+          <div class="md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold dark:bg-gray-800 dark:xl:bg-gray-900 dark:text-white dark:border-gray-700 w-full py-5 flex justify-center gap-10 bg-white border-t border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda">
+              <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Locations</p></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos">
+              <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Stays</p></a>
+            <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#about-us">About Us</a>
           </div>
         </div>
-        <figure class="night-mode py-2 px-5 rounded-full bg-white shadow-lg cursor-pointer md:p-0 md:bg-transparent md:transition-none md:active:translate-y-0 md:active:shadow-none md:shadow-none md:flex md:gap-8 md:cursor-default"><img class="hidden lg:block lg:w-5 md:cursor-pointer" src="./assets/svg/search.svg" alt="Icono de Busqueda"><img class="md:w-5 md:cursor-pointer" id="toggle" src="./assets/svg/moon.svg" alt="Icono de modo nocturno"><img class="hidden md:block md:w-5" src="./assets/svg/user.svg" alt="Icono de usuario"></figure>
+        <figure class="night-mode py-2 px-5 rounded-full bg-white shadow-lg cursor-pointer md:p-0 md:bg-transparent md:transition-none md:active:translate-y-0 md:active:shadow-none md:shadow-none md:flex md:gap-8 md:cursor-default dark:bg-gray-800"><img class="hidden lg:block lg:w-5 md:cursor-pointer" src="./assets/svg/search.svg" alt="Icono de Busqueda"><img class="md:w-5 md:cursor-pointer" id="toggle" src="./assets/svg/moon.svg" alt="Icono de modo nocturno"><img class="hidden md:block md:w-5" src="./assets/svg/user.svg" alt="Icono de usuario"></figure>
       </nav>
       <label class="md:mt-12 md:hidden md: z-10 w-full flex items-center gap-4 input-animation py-3 px-5 rounded-full shadow-lg bg-white" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
         <input class="text-start outline-none w-full text-md font-semibold" id="search" type="search" placeholder="San Francisco">
       </label>
       <h1 class="hidden z-10 text-3xl font-bold w-80 ml-14 mt-24 md:block lg:w-96 lg:text-4xl lg:mt-32 lg:ml-20">Find More Locations like this</h1>
-      <button class="z-10 button-animation bg-white text-primary text-md font-semibold p-3 rounded-full mt-64 shadow-lg w-3/5 md:w-44 md:mt-4 lg:mt-6 md:ml-14 lg:ml-20 xl:text-sm">Explore More</button>
+      <button class="z-10 button-animation bg-white text-primary text-md font-semibold p-3 rounded-full mt-64 shadow-lg w-3/5 md:w-44 md:mt-4 lg:mt-6 md:ml-14 lg:ml-20 xl:text-sm dark:bg-primary dark:text-white">Explore More</button>
     </header>
     <main class="flex flex-col gap-8 w-full py-6 md:py-10 md:gap-10" id="home">
       <section class="w-full" id="recommended">
@@ -81,7 +81,7 @@
           <section class="card md:col-span-2 lg:col-span-full lg:row-span-1 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/5 lg:w-auto">
-                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Chicago</h3>
+                <h3 class="text-2xl font-bold tracking-wide mb-4 lg:mb-2 md:tracking-tight">Chicago</h3>
                 <p class="text-base font-normal">2 rooms, bathroom and kitchen.</p>
               </article>
               <figure class="card__img bg-chicago lg:max-h-[30rem]"></figure>
@@ -90,7 +90,7 @@
           <section class="card md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-2/5 lg:w-1/5">
-                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Los Angeles</h3>
+                <h3 class="text-2xl font-bold tracking-wide mb-4 lg:mb-2 md:tracking-tight">Los Angeles</h3>
                 <p class="text-base font-normal">4 rooms, 3 bathrooms,  kitchen and private pool.</p>
               </article>
               <figure class="card__img bg-LA lg:max-h-[36rem]"></figure>
@@ -99,7 +99,7 @@
           <section class="card md:col-span-full lg:col-span-3 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/5 lg:w-1/3">
-                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Miami</h3>
+                <h3 class="text-2xl font-bold tracking-wide mb-4 lg:mb-2 md:tracking-tight">Miami</h3>
                 <p class="text-base font-normal">3 rooms, 2 bathrooms,  kitchen and amazing sea view.</p>
               </article>
               <figure class="card__img bg-miami lg:max-h-[17rem]"></figure>
@@ -108,7 +108,7 @@
           <section class="card md:col-span-full lg:col-span-3 md:row-span-1">
             <div class="content grid lg:justify-items-end">
               <article class="card__description md:w-1/3 lg:w-1/5">
-                <h3 class="text-2xl font-bold tracking-wider mb-4 lg:mb-2">Bali</h3>
+                <h3 class="text-2xl font-bold tracking-wide mb-4 lg:mb-2 md:tracking-tight">Bali</h3>
                 <p class="text-base font-normal">2 rooms, 2 bathrooms,  kitchen and private pool.</p>
               </article>
               <figure class="card__img bg-bali lg:max-h-[17rem]"></figure>
@@ -118,24 +118,25 @@
       </section>
       <section class="w-full px-6 pb-2 flex flex-col gap-2 md:pl-10 xl:pl-5" id="FAQs">
         <h2 class="title mb-2 md:mb-4">FAQs</h2>
-        <h3 class="subtitle">Payment Methods</h3>
-        <p class="description">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
-        <h3 class="subtitle">Cancellation Policy</h3>
-        <p class="description">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
-        <h3 class="subtitle">Long Stays</h3>
-        <p class="description">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+        <h3 class="subtitle ml-1 dark:text-gray-300">Payment Methods</h3>
+        <p class="description pl-2 dark:text-white">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+        <h3 class="subtitle ml-1 dark:text-gray-300">Cancellation Policy</h3>
+        <p class="description pl-2 dark:text-white">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+        <h3 class="subtitle ml-1 dark:text-gray-300">Long Stays</h3>
+        <p class="description pl-2 dark:text-white">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
       </section>
     </main>
     <footer class="w-full px-6 pt-4 pb-8 bg-gray-100 border-t border-gray-200 text-sm font-medium text-gray-400 flex flex-col gap-3 md:pl-10 xl:bg-white" id="about-us">
-      <h3 class="text-xl font-semibold mb-2">About Us</h3><a class="w-fit" href="#">Investors</a><a class="w-fit" href="#">Jobs</a><a class="w-fit" href="#">Privacy policy</a><a class="w-fit" href="#">Terms and Conditions</a><a class="w-fit" href="#">Platzi Travel, inc</a><a class="w-fit" href="#">Follow Us</a>
-      <div class="social-media flex gap-4 w-fit"><a href="#"><img src="./assets/svg/twitter.svg" alt="Icono de Twitter"></a><a href="#"><img src="./assets/svg/instagram.svg" alt="Icono de Instagram"></a></div>
+      <h3 class="text-xl font-semibold mb-2">About Us</h3><a class="w-fit ml-1" href="#">Investors</a><a class="w-fit ml-1" href="#">Jobs</a><a class="w-fit ml-1" href="#">Privacy policy</a><a class="w-fit ml-1" href="#">Terms and Conditions</a><a class="w-fit ml-1" href="#">Platzi Travel, inc</a><a class="w-fit ml-1" href="#">Follow Us</a>
+      <div class="social-media flex gap-4 w-fit ml-1"><a href="#"><img src="./assets/svg/twitter.svg" alt="Icono de Twitter"></a><a href="#"><img src="./assets/svg/instagram.svg" alt="Icono de Instagram"></a></div>
     </footer>
     <div class="tabBar lg:hidden sticky bottom-0">
-      <div class="md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold w-full py-5 flex justify-center gap-10 bg-white border border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda">
-          <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-1">Locations</p></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos">
-          <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-1">Stays</p></a>
-        <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-1" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-1" href="#about-us">About Us</a>
+      <div class="md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold dark:bg-gray-800 dark:xl:bg-gray-900 dark:text-white dark:border-gray-700 w-full py-5 flex justify-center gap-10 bg-white border-t border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda">
+          <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Locations</p></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos">
+          <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Stays</p></a>
+        <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#about-us">About Us</a>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
