--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
   <body class="w-full font-Montserrat box-border xl:max-w-6xl xl:mx-auto dark:bg-gray-900">
     <header class="w-full px-6 flex flex-col items-center h-[30rem] md:px-0 md:items-start lg:h-[34rem]">
-      <figure class="w-full absolute bg-sanFrancisco bg-cover bg-top bg-no-repeat h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[34rem] xl:max-w-6xl xl:"></figure>
       <nav class="z-10 w-full py-5 flex justify-end md:bg-white md:justify-between md:px-6 md:py-2 md:items-center lg:px-8 lg:py-3 md:shadow-sm xl:shadow-none xl:px-3 dark:md:bg-gray-800 dark:xl:bg-gray-900"><a class="md:flex hidden items-center gap-1" href="#"><img class="xl:w-9 w-10" src="./assets/svg/favicon.svg" alt="Icono de la pagina"><span class="text-primary text-lg font-bold xl:text-xl xl:font-semibold xl:tracking-tighter dark:text-white">Travel Page</span></a>
         <label class="md:w-1/2 md:flex lg:hidden dark:md:shadow-gray-700 hidden z-10 w-full items-center gap-4 py-3 px-5 rounded-full shadow-sm" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
           <input class="text-start outline-none w-full text-md font-semibold dark:md:bg-gray-800 dark:text-white" id="search" type="search" placeholder="San Francisco">
@@ -23,11 +22,12 @@
           <div class="md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold dark:bg-gray-800 dark:xl:bg-gray-900 dark:text-white dark:border-gray-700 w-full py-5 flex justify-center gap-10 bg-white border-t border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda">
               <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Locations</p></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos">
               <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Stays</p></a>
-            <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#about-us">About Us</a>
+            <button class="toggleTabBar lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Moon"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#about-us">About Us</a>
           </div>
         </div>
         <figure class="night-mode py-2 px-5 rounded-full bg-white shadow-lg cursor-pointer md:p-0 md:bg-transparent md:transition-none md:active:translate-y-0 md:active:shadow-none md:shadow-none md:flex md:gap-8 md:cursor-default dark:bg-gray-800"><img class="hidden lg:block lg:w-5 md:cursor-pointer" src="./assets/svg/search.svg" alt="Icono de Busqueda"><img class="md:w-5 md:cursor-pointer" id="toggle" src="./assets/svg/moon.svg" alt="Icono de modo nocturno"><img class="hidden md:block md:w-5" src="./assets/svg/user.svg" alt="Icono de usuario"></figure>
       </nav>
+      <figure class="w-full absolute bg-sanFrancisco bg-cover bg-top bg-no-repeat h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[34rem] xl:max-w-6xl xl:"></figure>
       <label class="md:mt-12 md:hidden md: z-10 w-full flex items-center gap-4 input-animation py-3 px-5 rounded-full shadow-lg bg-white" for="search"><span class="w-auto flex align-items-center"><img class="w-5" src="./assets/svg/search.svg" alt="Icono de Busqueda"></span>
         <input class="text-start outline-none w-full text-md font-semibold" id="search" type="search" placeholder="San Francisco">
       </label>
@@ -118,12 +118,12 @@
       </section>
       <section class="w-full px-6 pb-2 flex flex-col gap-2 md:pl-10 xl:pl-5" id="FAQs">
         <h2 class="title mb-2 md:mb-4">FAQs</h2>
-        <h3 class="subtitle ml-1 dark:text-gray-300">Payment Methods</h3>
-        <p class="description pl-2 dark:text-white">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
-        <h3 class="subtitle ml-1 dark:text-gray-300">Cancellation Policy</h3>
-        <p class="description pl-2 dark:text-white">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
-        <h3 class="subtitle ml-1 dark:text-gray-300">Long Stays</h3>
-        <p class="description pl-2 dark:text-white">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+        <h3 class="subtitle ml-1 dark:text-gray-400">Payment Methods</h3>
+        <p class="description pl-2 dark:text-gray-200">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+        <h3 class="subtitle ml-1 dark:text-gray-400">Cancellation Policy</h3>
+        <p class="description pl-2 dark:text-gray-200">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+        <h3 class="subtitle ml-1 dark:text-gray-400">Long Stays</h3>
+        <p class="description pl-2 dark:text-gray-200">We accept VISA, MasterCard, American Express, Paypal and Binance. We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
       </section>
     </main>
     <footer class="w-full px-6 pt-4 pb-8 bg-gray-100 border-t border-gray-200 text-sm font-medium text-gray-400 flex flex-col gap-3 md:pl-10 xl:bg-white" id="about-us">
@@ -131,10 +131,8 @@
       <div class="social-media flex gap-4 w-fit ml-1"><a href="#"><img src="./assets/svg/twitter.svg" alt="Icono de Twitter"></a><a href="#"><img src="./assets/svg/instagram.svg" alt="Icono de Instagram"></a></div>
     </footer>
     <div class="tabBar lg:hidden sticky bottom-0">
-      <div class="md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold dark:bg-gray-800 dark:xl:bg-gray-900 dark:text-white dark:border-gray-700 w-full py-5 flex justify-center gap-10 bg-white border-t border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda">
-          <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Locations</p></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos">
-          <p class="hidden lg:block lg:px-2 lg:py-1 lg:rounded-full button-animation hover:translate-y-0">Stays</p></a>
-        <button class="lg:hidden"><img src="./assets/svg/user.svg" alt="Icono de Usuario"></button><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#FAQs">FAQs</a><a class="hidden lg:px-2 lg:py-1 lg:rounded-full lg:block button-animation hover:translate-y-0" href="#about-us">About Us</a>
+      <div class="md:hidden landscape:hidden dark:bg-gray-800 dark:text-white dark:border-gray-700 w-full py-5 flex justify-evenly bg-white border-t border-gray-200" id="tabBar"><a class="lg:hidden" href="#"><img src="./assets/svg/home.svg" alt="Icono del Home"></a><a href="#recommended"><img class="lg:hidden" src="./assets/svg/search.svg" alt="Icono de Busqueda"></a><a href="#trending-stays"><img class="lg:hidden" src="./assets/svg/heart.svg" alt="Icono de Favoritos"></a>
+        <button class="lg:hidden" id="toggleTabBar"><img class="w-6" src="./assets/svg/moon.svg" alt="Icono de Moon"></button>
       </div>
     </div>
     <script src="./index.js"></script>
